Expanded history section, added rules section, other small changes

--- a/index.html
+++ b/index.html
@@ -67,21 +67,66 @@
                 </p>
                 <div class="galery">
                     <div class="galery-image">
-                        <img src="images/dartboard.jpg" alt="Dartboard">
-                    </div>
-                    <div class="galery-image">
                         <img src="images/dart.jpg" alt="Dart">
                     </div>
+                </div>
+                <h2 class="section-part-title">The Origins</h2>
+                <p>
+                    Much is speculated but if rumor holds true, the game of darts had its origin during the reign of King Henry VIII of England. It is believed that he told his archers to practice their arching skills all year round so they would be sharp and ready for battle at any time.<br><br>
+                    While practicing outside some archers, instead of shooting, started throwing their arrows as a means of fun. Maybe the thinking was, “anyone can shoot accurately lets see who can throw accurately”.
+                    Needless to say, everyone knows England’s unfavorable weather, and it wasn’t long before this outdoor past-time or game was taken indoors to the comfort of the local pub. To handle the arrows better and make the game easier to play while indoors, the arrows were shortened. <br><br>
+                    The bottom of an overturned wine or ale (beer) barrel was used as a “target”. An interesting fact about the word “target”. The bottom of a wine / beer barrel was called a “butt”, which originated via archery from the French word “butte”, meaning “target”.<br><br>
+                </p>
+                <div class="galery2">
                     <div class="galery-image">
-                        <img src="images/paper-dartboard.jpg" alt="Paper dartboard">
+                        <img src="images/wooden-barrel.jpg" alt="Wooden barrel">
+                    </div>
+                    <div class="galery-image">
+                            <img src="images/paper-dartboard.jpg" alt="Paper dartboard">
                     </div>
                 </div>
-                <h2 class="origins-title">The Origins</h2>
-                <p class="origins">
-                    Much is speculated but if rumor holds true, the game of darts had its origin during the reign of King Henry VIII of England. It is believed that he told his archers to practice their arching skills all year round so they would be sharp and ready for battle at any time.
-                    While practicing outside some archers, instead of shooting, started throwing their arrows as a means of fun. Maybe the thinking was, “anyone can shoot accurately lets see who can throw accurately”.
-                    Needless to say, everyone knows England’s unfavorable weather, and it wasn’t long before this outdoor past-time or game was taken indoors to the comfort of the local pub. To handle the arrows better and make the game easier to play while indoors, the arrows were shortened.
-                    The bottom of an overturned wine or ale (beer) barrel was used as a “target”. An interesting fact about the word “target”. The bottom of a wine / beer barrel was called a “butt”, which originated via archery from the French word “butte”, meaning “target”.
+            </div>
+        </section>
+
+        <section class="rules">
+            <div class="section-header">
+                <h1 class="section-heading">Rules</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="section-body">
+                <div class="rules-list">
+                    <ul class="rules-column">
+                        <li>
+                            For deciding who takes the first turn in the game, the players throw a single dart each, who throws it near to the Bull takes the first chance.
+                        </li>
+                        <li>
+                            Fee darts are thrown unless the game is won.
+                        </li>
+                        <li>
+                            At the end of only the darts stuck in, the board are counted and the one that bounces or fall out cannot be thrown again.
+                        </li>
+                    </ul>
+                    <ul class="rules-column">
+                        <li>
+                            If more than total remaining points are scored by a player that there throw ends and scored zero. 
+                        </li>
+                        <li>
+                            The dashboards centre or the centre of the Bull should be exactly 5 feet 8 inch high. 
+                        </li>
+                        <li>
+                            Darts are to be thrown from a toeline marked clearly which is generally called the oche which must be at least 7 feet 9 inches from the board when measured horizontally. 
+                        </li>
+                    </ul>
+                    <div class="rules-image">
+                        <img src="images/Darts-Rules.jpg" alt="Dartboard with points explained">
+                    </div>   
+                </div>
+                <h2 class="section-part-title">501</h2>
+                <p>
+                    501 up is considered as the most professional match and is the simplest of game. <br><br> 
+                    The players start with a score of 501 and take his turn to throw three darts. The score for each turn is calculated and deducted from the players total. 
+                    Bullseye brings the player 50 scores, the outer ring 25 and a dart in the double or trebles the segment score. 
+                    While playing, the objective is to be the first player to reduce the score to exactly zero, the only way this can happen bring that the last dart thrown must land in a double or the bullseye. 
                 </p>
             </div>
         </section>
