Added fun facts and footer, linked navigation to proper sections, added back to top button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" id="home">
         <div class="hamburger-menu">
             <div class="line line-1"></div>
             <div class="line line-2"></div>
@@ -35,34 +35,34 @@
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="#" class="menu-link" 
+                    <a href="#home" class="menu-link" 
                     data-content="Home">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="menu-link" 
+                    <a href="#history" class="menu-link" 
                     data-content="History">History</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="menu-link" 
+                    <a href="#rules" class="menu-link" 
                     data-content="Rules">Rules</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="menu-link" 
+                    <a href="#fun-facts" class="menu-link" 
                     data-content="Fun Facts">Fun Facts</a>
                 </li>
             </ul>
         </section>
 
-        <section class="history">
+        <section class="history" id="history">
             <div class="section-header">
                 <h1 class="section-heading">History</h1>
                 <div class="underline"></div>
             </div>
             <div class="section-body">
                 <p class="intro">
-                    Darts or dart-throwing is a competitive sport in which two or more players bare-handedly throw small sharp-pointed missiles known as darts at a round target known as a dartboard. Darts players are sometimes termed "dartists".<br><br>
+                    Darts or dart-throwing is a competitive sport in which two or more players bare-handedly throw small sharp-pointed missiles known as darts at a round target known as a dartboard. Darts players are sometimes termed <b><i>dartists</i></b>.<br><br>
                     Points can be scored by hitting specific marked areas of the board, though unlike in sports such as archery, these areas are distributed all across the board and do not follow a principle of points increasing towards the centre of the board. 
-                    Though a number of similar games using various boards and rules exist, the term "darts" usually now refers to a standardised game involving a specific board design and set of rules.<br><br>
+                    Though a number of similar games using various boards and rules exist, the term <b><i>darts</i></b> usually now refers to a standardised game involving a specific board design and set of rules.<br><br>
                     While being a professional shooting sport, darts is also a traditional pub game. Darts is commonly played in the United Kingdom and the Republic of Ireland, and recreationally enjoyed across the world.
                 </p>
                 <div class="galery">
@@ -73,9 +73,9 @@
                 <h2 class="section-part-title">The Origins</h2>
                 <p>
                     Much is speculated but if rumor holds true, the game of darts had its origin during the reign of King Henry VIII of England. It is believed that he told his archers to practice their arching skills all year round so they would be sharp and ready for battle at any time.<br><br>
-                    While practicing outside some archers, instead of shooting, started throwing their arrows as a means of fun. Maybe the thinking was, “anyone can shoot accurately lets see who can throw accurately”.
+                    While practicing outside some archers, instead of shooting, started throwing their arrows as a means of fun. Maybe the thinking was: “Anyone can shoot accurately lets see who can throw accurately.”
                     Needless to say, everyone knows England’s unfavorable weather, and it wasn’t long before this outdoor past-time or game was taken indoors to the comfort of the local pub. To handle the arrows better and make the game easier to play while indoors, the arrows were shortened. <br><br>
-                    The bottom of an overturned wine or ale (beer) barrel was used as a “target”. An interesting fact about the word “target”. The bottom of a wine / beer barrel was called a “butt”, which originated via archery from the French word “butte”, meaning “target”.<br><br>
+                    The bottom of an overturned wine or ale (beer) barrel was used as a <b><i>target</i></b>. An interesting fact about the word <b><i>target</i></b>. The bottom of a wine / beer barrel was called a <b><i>butt</i></b>, which originated via archery from the French word <i>“butte”</i>, meaning <b><i>target</i></b>.<br><br>
                 </p>
                 <div class="galery2">
                     <div class="galery-image">
@@ -88,7 +88,7 @@
             </div>
         </section>
 
-        <section class="rules">
+        <section class="rules" id="rules">
             <div class="section-header">
                 <h1 class="section-heading">Rules</h1>
                 <div class="underline"></div>
@@ -123,13 +123,54 @@
                 </div>
                 <h2 class="section-part-title">501</h2>
                 <p>
-                    501 up is considered as the most professional match and is the simplest of game. <br><br> 
-                    The players start with a score of 501 and take his turn to throw three darts. The score for each turn is calculated and deducted from the players total. 
+                    <b><i>501</i></b> up is considered as the most professional match and is the simplest of game. <br><br> 
+                    The players start with a score of <b><i>501</i></b> and take his turn to throw three darts. The score for each turn is calculated and deducted from the players total. 
                     Bullseye brings the player 50 scores, the outer ring 25 and a dart in the double or trebles the segment score. 
                     While playing, the objective is to be the first player to reduce the score to exactly zero, the only way this can happen bring that the last dart thrown must land in a double or the bullseye. 
                 </p>
             </div>
         </section>
+
+        <section class="fun-facts" id="fun-facts">
+            <div class="section-header">
+                <h1 class="section-heading">Fun Facts</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="section-body">
+                <h2 class="section-part-title">The first boards were made out of elm</h2>
+                <p>
+                    Back in the day, bar owners would use solid, circular blocks of elm tree as the dartboard. 
+                    The segments would be painted on for consistency. However, elm dartboards developed holes much faster than today’s dartboards.<br>
+                    Pub owners would need to lug the cross sections of tree off the wall and soak the wood overnight to close the holes.<br><br> 
+                    If you thought cleaning beer lines was a pain in the arse, imagine doing this every day for a local dart hall with 20 boards!  No thanks!
+                </p>
+                <h2 class="section-part-title">The numbers are not random</h2>
+                <p>
+                    The number sequence is strategically placed to encourage accuracy and punish inaccuracy. 
+                    Basically, if you go for glory and hit it, you will be rewarded. But if you only just miss, by a millimeter, the board will hand out some fearse punishment.<br><br>
+                    The placement of low scoring numbers either side of large numbers, for example 1 and 5 either side of the 20, 3 and 2 either side of the 17, or 4 and 1 either side of the 18, will punish poor throwing. 
+                </p>
+                
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer-content">
+              <p class="copyright">
+                Copyright &copy; 2021, Maciej Fuhrmann
+              </p>
+              <div class="footer-menu">
+                <a href="#home" class="footer-menu-link">Home</a>
+                <a href="#history" class="footer-menu-link">History</a>
+                <a href="#rules" class="footer-menu-link">Rules</a>
+                <a href="#fun-facts" class="footer-menu-link">Fun Facts</a>
+              </div>
+            </div>
+          </footer>
+          <a href="#" class="scroll-btn">
+            <i class="fas fa-arrow-up"></i>
+          </a>
+        </div>
     </div>
 
     <script src="script.js"></script>
