Fixes for responsivness, added smooth scroll behaviour

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class="mainTitle">
                 <h1>World of Darts</h1>
                 <p>The numbers are not random on the dartboard.</p>
-                <button>Learn more</button>
+                <a href="#num-not-random">
+                    <button>Learn more</button>
+                </a>
             </div>
         </header>
 
@@ -125,7 +127,7 @@
                 <p>
                     <b><i>501</i></b> up is considered as the most professional match and is the simplest of game. <br><br> 
                     The players start with a score of <b><i>501</i></b> and take his turn to throw three darts. The score for each turn is calculated and deducted from the players total. 
-                    Bullseye brings the player 50 scores, the outer ring 25 and a dart in the double or trebles the segment score. 
+                    Bullseye brings the player 50 scores, the outer ring 25 and a dart in the double or trebles the segment score.<br><br> 
                     While playing, the objective is to be the first player to reduce the score to exactly zero, the only way this can happen bring that the last dart thrown must land in a double or the bullseye. 
                 </p>
             </div>
@@ -144,7 +146,7 @@
                     Pub owners would need to lug the cross sections of tree off the wall and soak the wood overnight to close the holes.<br><br> 
                     If you thought cleaning beer lines was a pain in the arse, imagine doing this every day for a local dart hall with 20 boards!  No thanks!
                 </p>
-                <h2 class="section-part-title">The numbers are not random</h2>
+                <h2 class="section-part-title" id="num-not-random">The numbers are not random</h2>
                 <p>
                     The number sequence is strategically placed to encourage accuracy and punish inaccuracy. 
                     Basically, if you go for glory and hit it, you will be rewarded. But if you only just miss, by a millimeter, the board will hand out some fearse punishment.<br><br>
@@ -159,12 +161,6 @@
               <p class="copyright">
                 Copyright &copy; 2021, Maciej Fuhrmann
               </p>
-              <div class="footer-menu">
-                <a href="#home" class="footer-menu-link">Home</a>
-                <a href="#history" class="footer-menu-link">History</a>
-                <a href="#rules" class="footer-menu-link">Rules</a>
-                <a href="#fun-facts" class="footer-menu-link">Fun Facts</a>
-              </div>
             </div>
           </footer>
           <a href="#" class="scroll-btn">
